--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </section>
     </main>
-
+    <div id="toast">Task Completed!</div>
     <script src="main.js"></script>
   </body>
 </html>
